cleanup post edit/share issues does not fit well in mdc-modal

--- a/assets/stylus/global.styl
+++ b/assets/stylus/global.styl
@@ -230,6 +230,7 @@ img.avatar
 	.comment
 		font-size: 0.8em
 	.comment-photo
+		margin-right:7px
 		img
 			.not-digitopia-xsmall &,.not-digitopia-small &
 				max-height:40vh
