--- a/assets/stylus/ogTagPreview.styl
+++ b/assets/stylus/ogTagPreview.styl
@@ -9,7 +9,10 @@
 	margin-bottom:30px
 	margin-left: -7px
 	margin-right: -7px
-	
+
+	.comment &
+		margin-right: 7px
+		height: 33vh
 	&:hover
 		border-color: #222
 	.play
